--- a/Sports.html
+++ b/Sports.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-5" data-rv-view="102">
+  <section id="menu-5" data-rv-view="141">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-s" data-rv-view="87" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/f">easy website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-s" data-rv-view="126" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-r" data-rv-view="90" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-r" data-rv-view="129" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class=" container article-slider">
         <div class=" row">
             <div class=" col-xs-12">
@@ -166,7 +166,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-6" data-rv-view="104" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-6" data-rv-view="143" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
