--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -145,12 +145,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-600x369.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-1-600x450.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Maitland Cottage Hospital Trip Travel Blog</h4>
-                        <h5 class="card-subtitle">Written By: Juliette Smeys</h5>
-                        <p class="card-text">A travel blog about the recent high school summer trip to South Africa to provide assistance for the Maitland Cottage Hospital.</p>
-                        <div class="card-btn"><a href="page62.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">The Nature and History of Central Banking</h4>
+                        <h5 class="card-subtitle">Written By: Isaiah Lowney</h5>
+                        <p class="card-text">A (not so) breif history of Central Banking.</p>
+                        <div class="card-btn"><a href="page80.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
