--- a/page41.html
+++ b/page41.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-dw" data-rv-view="991">
+  <section id="menu-dw" data-rv-view="1017">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader17 mbr-after-navbar" id="extHeader17-e1" data-rv-view="995" style="background-image: url(assets/images/img-extheader17-bg.jpg);">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader17 mbr-after-navbar" id="extHeader17-e1" data-rv-view="1021" style="background-image: url(assets/images/img-extheader17-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -82,7 +82,7 @@
     <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#content1-dz"><i class="mbr-arrow-icon"></i></a></div>                 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-dz" data-rv-view="998" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-dz" data-rv-view="1024" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -92,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section extCountdown1" id="extCountdown1-e0" data-rv-view="1000" style="background-color: rgb(145, 189, 174); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section extCountdown1" id="extCountdown1-e0" data-rv-view="1026" style="background-color: rgb(145, 189, 174); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -102,7 +102,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dx" data-rv-view="993" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dx" data-rv-view="1019" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
