--- a/page52.html
+++ b/page52.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-gv" data-rv-view="1224">
+  <section id="menu-gv" data-rv-view="1250">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1221" style="padding-top: 100px; padding-bottom: 50px;">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1247" style="padding-top: 100px; padding-bottom: 50px;">
 
     
     <div class="bgText">
@@ -102,7 +102,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1226" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gz" data-rv-view="1252" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -112,7 +112,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1228" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h0" data-rv-view="1254" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -122,7 +122,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1230" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-h1" data-rv-view="1256" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -132,7 +132,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1232" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-h2" data-rv-view="1258" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -142,7 +142,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1234" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gw" data-rv-view="1260" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
